--- a/app/js/templates/about.hbs
+++ b/app/js/templates/about.hbs
@@ -1,4 +1,20 @@
 <div class="container about-us">
+
+
+	<img src="../img/linkyeg.png" alt="linkyeg Logo "/>
+
+  <div class="inset">
+    <p>
+      linkyeg.ca is an Edmonton, mobile-optimized website that connects homeless and low-income residents with critical and life-saving resources nearby.  Set up for and updated at the EPL (Edmonton Public Library) Open Data hackathon, linkyeg.ca is a fork from the Link-SF project, with the original source code and details available at <a href="https://github.com/zendesk/linksf" target="_blank">Github</a>.  A working version of their code was available at Link-SF.com, but it was down at the time of this writing.
+    </p>
+    <p>
+      linkyeg.ca was set up and updated by <a href="http://ideaOwl.com/">Eugene Chen</a>, Brendan Gluth and David Rauch.
+    </p>
+    <p>
+      For some background on the open source project, <a href="http://www.stanthonysf.org/">St. Anthony Foundation</a>, Zendesk, and user testing expert <a href="http://kimberlymccollister.com/design/">Kimberly McCollister</a> designed and implemented Link-SF.  This collaboration emerged as a result of the Community Benefits Agreement within the Mid-Market revitalization project in the city of San Francisco.  St. Anthony’s Tenderloin Technology Lab reached out to the tech community after observing an increase in the use of smart phones by low-income residents. Link-SF is a result of this process and is an attempt to use mobile technology to assist those most in need.
+    </p>
+  </div>
+<!--
 	<img src="../img/link-sf.png" alt="Link-SF Logo"/>
 
   <div class="inset">
@@ -32,10 +48,11 @@
     <p>
       Link-SF is free software. Get it here: <a href="http://github.com/zendesk/linksf">http://github.com/zendesk/linksf</a>
     </p>
-  </div>
+  </div>-->
 </div>
 
+
 <p class="credits">
-  CDN hosting provided graciously by <a href="http://www.fast.ly">fast.ly</a><br/>
+<!--  CDN hosting provided graciously by <a href="http://www.fast.ly">fast.ly</a><br/> -->
   Icons by P.J. Onori, Daniel Bruce, and Dave Gandy, courtesy of <a href="http://fontello.com">fontello.com</a>
 </p>
