--- a/app/js/templates/terms.hbs
+++ b/app/js/templates/terms.hbs
@@ -1,123 +1,123 @@
 <div class="terms">
-  <h1>Link-SF Terms of Service</h1>
+  <h1>linkyeg.ca Terms of Service</h1>
 
-  <p>These Terms of Service constitute a contract between you and St. Anthony Foundation
-  (“St. Anthony”) relating to your use of Link-SF Application found at: www.link-sf.com
-  (“Link-SF”).</p>
+  <p>These Terms of Service constitute a contract between you and the Open Edmonton group
+  (“Open Edmonton”) relating to your use of linkyeg.ca Application found at: www.linkyeg.ca.com
+  (“linkyeg.ca”).</p>
 
-  <h2>Disclaimer.</h2><p>ST. ANTHONY HEREBY DISCLAIMS ANY LIABILITY ARISING
-  FROM THE USE OF LINK-SF. LINK-SF, AND THE INFORMATION CONTAINED
-  ON LINK-SF IS PROVIDED AS-IS, WITH NO WARRANTIES. ST ANTHONY
+  <h2>Disclaimer.</h2><p>Open Edmonton HEREBY DISCLAIMS ANY LIABILITY ARISING
+  FROM THE USE OF linkyeg.ca. linkyeg.ca, AND THE INFORMATION CONTAINED
+  ON linkyeg.ca IS PROVIDED AS-IS, WITH NO WARRANTIES. ST ANTHONY
   DOES NOT PROVIDE ANY WARRANTIES, EXPRESS OR IMPLIED, INCLUDING
   BUT NOT LIMITED TO THE WARRANTIES OF NON-INFRINGEMENT OF THIRD
   PARTY RIGHTS, TITLE, MERCHANTABILITY, FITNESS FOR A PARTICULAR
   PURPOSE OR FREEDOM FROM COMPUTER VIRUS, WITH RESPECT TO LINK-
-  SF, THE INFORMATION CONTAINED ON LINK-SF, OR THE LINKS
-  CONTAINED ON LINK-SF. THE ORGANIZATIONS AND SERVICES LISTED ON
-  LINK-SF ARE NOT NECESSARILY AFFILIATED WITH ST ANTHONY, AND
-  INCLUSION OF SUCH ORGANIZATIONS AND SERVICES ON LINK-SF DOES
+  SF, THE INFORMATION CONTAINED ON linkyeg.ca, OR THE LINKS
+  CONTAINED ON linkyeg.ca. THE ORGANIZATIONS AND SERVICES LISTED ON
+  linkyeg.ca ARE NOT NECESSARILY AFFILIATED WITH ST ANTHONY, AND
+  INCLUSION OF SUCH ORGANIZATIONS AND SERVICES ON linkyeg.ca DOES
   NOT CONSTITUTE ENDORSEMENT OR SPONSORSHIP BY ST ANTHONY. USE
-  OF LINK-SF IS AT THE USER’S OWN RISK.
-  YOU ACKNOWLEDGE, BY YOUR USE OF ANY OF LINK-SF, THAT YOUR USE
-  OF LINK-SF AND ANY RELIANCE UPON EITHER IS AT YOUR SOLE RISK AND
+  OF linkyeg.ca IS AT THE USER’S OWN RISK.
+  YOU ACKNOWLEDGE, BY YOUR USE OF ANY OF linkyeg.ca, THAT YOUR USE
+  OF linkyeg.ca AND ANY RELIANCE UPON EITHER IS AT YOUR SOLE RISK AND
   THAT YOU ASSUME FULL RESPONSIBILITY FOR ALL COSTS ASSOCIATED
-  WITH YOUR USE OF LINK-SF.  YOU AGREE THAT, TO THE FULLEST EXTENT
+  WITH YOUR USE OF linkyeg.ca.  YOU AGREE THAT, TO THE FULLEST EXTENT
   PERMITTED BY APPLICABLE LAW, UNDER NO CIRCUMSTANCES SHALL ST
   ANTHONY BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL OR
   CONSEQUENTIAL DAMAGES, INCLUDING, BUT NOT LIMITED TO, DAMAGES
   FOR LOSS OF PROFITS, USE, IMAGES, DATA OR OTHER INTANGIBLES, EVEN
   IF ST ANTHONY HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH
   DAMAGES, THAT RESULT FROM THE USE OR THE INABILITY TO USE LINK-
-  SF OR FROM ANY CHANGES TO LINK-SF.
+  SF OR FROM ANY CHANGES TO linkyeg.ca.
   YOU AGREE THAT, TO THE FULLEST EXTENT PERMITTED BY APPLICABLE
   LAW, THAT UNDER NO CIRCUMSTANCES SHALL ST ANTHONY BE LIABLE
   OR RESPONSIBLE FOR HARM OR DAMAGES ARISING FROM YOUR USE OF
-  THE INFORMATION, FACTS, AND OPINIONS AVAILABLE ON LINK-SF
-  (INCLUDING ANY LINKS ON LINK-SF) OR ARISING OUT OF ANY ACTION
+  THE INFORMATION, FACTS, AND OPINIONS AVAILABLE ON linkyeg.ca
+  (INCLUDING ANY LINKS ON linkyeg.ca) OR ARISING OUT OF ANY ACTION
   TAKEN IN RESPONSE TO OR AS A RESULT OF ANY INFORMATION, FACTS,
-  AND OPINIONS AVAILABLE ON LINK-SF. YOU HEREBY WAIVE ANY AND
-  ALL CLAIMS AGAINST ST. ANTHONY ARISING OUT OF YOUR USE OF LINK-
+  AND OPINIONS AVAILABLE ON linkyeg.ca. YOU HEREBY WAIVE ANY AND
+  ALL CLAIMS AGAINST Open Edmonton ARISING OUT OF YOUR USE OF LINK-
   SF AND THE INFORMATION, FACTS, AND OPINIONS AVAILABLE THEREON.
   YOU AGREE TO ASSUME RESPONSIBILITY FOR ANY HARM OR DAMAGES
   OF ANY KIND OR CHARACTER WHATSOEVER RESULTING FROM YOUR USE
-  OF LINK-SF.</p>
+  OF linkyeg.ca.</p>
 
-  <h2>Restrictions on Use.</h2><p>You may not (a) modify, adapt, or hack Link-SF or otherwise
+  <h2>Restrictions on Use.</h2><p>You may not (a) modify, adapt, or hack linkyeg.ca or otherwise
   attempt to gain unauthorized access to Link SF’s related systems or networks; (b) sell,
-  resell, or exploit for any commercial purposes any part of Link-SF (c) falsely imply any
-  sponsorship or association with St Anthony, (d) use Link-SF in any unlawful manner; (e)
-  use Link-SF to store or transmit files, materials, data, text, audio, video, images or other
+  resell, or exploit for any commercial purposes any part of linkyeg.ca (c) falsely imply any
+  sponsorship or association with St Anthony, (d) use linkyeg.ca in any unlawful manner; (e)
+  use linkyeg.ca to store or transmit files, materials, data, text, audio, video, images or other
   content that infringes on any person’s intellectual property rights; (f) use the Service in
-  any manner that interferes with or disrupts the integrity or performance of Link-SF and
+  any manner that interferes with or disrupts the integrity or performance of linkyeg.ca and
   its components; (g) attempt to decipher, decompile, reverse engineer or otherwise
-  discover the source code of any software making up Link-SF; (h) use Link-SF to transmit
+  discover the source code of any software making up linkyeg.ca; (h) use linkyeg.ca to transmit
   any “protected health information” as that term is defined in 45 C.F.R. 160.103; (i) use
-  Link-SF to knowingly post transmit, upload, link to, send or store any viruses, malware,
+  linkyeg.ca to knowingly post transmit, upload, link to, send or store any viruses, malware,
   Trojan horses, time bombs, or any other similar harmful software; or (j) try to use, or use
-  Link-SF in violation of these Terms of Service.
+  linkyeg.ca in violation of these Terms of Service.
 
   <h2>Intellectual Property.</h2><p>Nothing contained herein shall be construed as conferring any
   license or right, by implication, estoppel or otherwise, under copyright or other
-  intellectual property rights. All intellectual property rights in the contents of Link-SF are
-  owned by St. Anthony. St. Anthony’s rights to the content of Link-SF are protected by
+  intellectual property rights. All intellectual property rights in the contents of linkyeg.ca are
+  owned by Open Edmonton. Open Edmonton’s rights to the content of linkyeg.ca are protected by
   national and international copyright, trademark, and other intellectual property laws and
   treaties.</p>
 
-  <h2>Linking to Link-SF.</h2><p>If you link to Link-SF, you agree not to (1) imply that St. Anthony
+  <h2>Linking to linkyeg.ca.</h2><p>If you link to linkyeg.ca, you agree not to (1) imply that Open Edmonton
   is endorsing you or your products and services; (2) imply an affiliation between you and
-  St. Anthony without our prior written consent; (3) present false or misleading
-  impressions about Link-SF or St. Anthony; or (4) link to materials that may be
+  Open Edmonton without our prior written consent; (3) present false or misleading
+  impressions about linkyeg.ca or Open Edmonton; or (4) link to materials that may be
   interpreted as distasteful or offensive.
   In establishing links, you must not represent in any way, expressly or implicitly, that you
-  have received the endorsement, sponsorship or support of Link-SF.  You agree to remove
-  any links you have to Link-SF upon St. Anthony’s request.
+  have received the endorsement, sponsorship or support of linkyeg.ca.  You agree to remove
+  any links you have to linkyeg.ca upon Open Edmonton’s request.
 
-  <h2>Modifications.</h2><p>St. Anthony may modify these Terms of Service at any time, and such
+  <h2>Modifications.</h2><p>Open Edmonton may modify these Terms of Service at any time, and such
   modifications shall be effective and binding upon you immediately upon posting to Link-
   SF. Such posting will constitute notice to you of such amendments to these Terms of
   Service. It is your responsibility to review these Terms of Service to apprise yourself of
   any such modifications to the Terms of Service.
-  St. Anthony may terminate, change, suspend or discontinue any aspect of Link-SF,
-  including the availability of any features of Link-SF, at any time. St. Anthony may also
+  Open Edmonton may terminate, change, suspend or discontinue any aspect of linkyeg.ca,
+  including the availability of any features of linkyeg.ca, at any time. Open Edmonton may also
   impose limits on certain features and services or restrict your access to parts or all of
-  Link-SF without notice or liability.
-  The officers, agents, directors, and consultants (including Zendesk, Inc.) of St. Anthony
+  linkyeg.ca without notice or liability.
+  The officers, agents, directors, and consultants (including Zendesk, Inc.) of Open Edmonton
   shall have no liability to you under this Agreement or by operation of law. The officers,
-  agents, directors, and consultants of St. Anthony disclaim any liability arising from your
-  use of Link-SF. The officers, agents, directors, and consultants of St. Anthony do not
+  agents, directors, and consultants of Open Edmonton disclaim any liability arising from your
+  use of linkyeg.ca. The officers, agents, directors, and consultants of Open Edmonton do not
   provide any warranties, express or implied, including but not limited to the warranties of
   non-infringement of third party rights, title, merchantability, fitness for a particular
   purpose.</p>
 
   <h2>Choice of Law and Venue.</h2><p>These Terms of Service shall be governed by and construed
   in accordance with the laws of the State of California, without regard to its choice of law
-  provisions. You and St. Anthony agree to submit to the personal and exclusive
-  jurisdiction of the federal and state courts located within San Francisco, California. These
+  provisions. You and Open Edmonton agree to submit to the personal and exclusive
+  jurisdiction of the federal and provincial courts located within Edmonton, AB. These
   Terms of Service, including any modifications hereto constitute the entire agreement
-  between St. Anthony and you, and supersedes all prior understandings and agreements,
+  between Open Edmonton and you, and supersedes all prior understandings and agreements,
   whether written or oral, as to such subject matter.
 
-  <h2>Location Based Service.</h2><p>Link-SF is a location-based service, so St. Anthony necessarily
+  <h2>Location Based Service.</h2><p>linkyeg.ca is a location-based service, so Open Edmonton necessarily
   collects and uses the location of users’ mobile devices or location-based data to provide
-  the service. By using Link-SF, you authorize St. Anthony to access your location, and
+  the service. By using linkyeg.ca, you authorize Open Edmonton to access your location, and
   waive any claim against St Anthony for accessing your location. To the extent that the
-  location-based data St. Anthony collects is or can be readily combined with other data to
-  personally identify you, St. Anthony will treat such data in the same way as other
-  personal information. St. Anthony will only use your location as necessary to provide
-  Link-SF as a service and as may be required to comply with the law.
+  location-based data Open Edmonton collects is or can be readily combined with other data to
+  personally identify you, Open Edmonton will treat such data in the same way as other
+  personal information. Open Edmonton will only use your location as necessary to provide
+  linkyeg.ca as a service and as may be required to comply with the law.
 
-  <h2>Information Collected by Link-SF.</h2><p>Aside from your location, St Anthony may collect
-  information about that you that you may disclose through Link-SF’s feedback form. St.
+  <h2>Information Collected by linkyeg.ca.</h2><p>Aside from your location, St Anthony may collect
+  information about that you that you may disclose through linkyeg.ca’s feedback form. St.
   Anthony will not collect any personally identifiable information about you unless you
-  provide it voluntarily through Link-SF’s feedback form.</p>
+  provide it voluntarily through linkyeg.ca’s feedback form.</p>
 
-  <h2>Cookies.</h2><p>Link-SF uses cookies. A cookie is a small file placed on your computer's hard
-  drive to identify you as a user, and facilitate your ongoing access to the use of Link-SF.
-  St. Anthony does not use cookies to collect any personal or identifying information about
-  users, nor does St. Anthony sell or make them available to third parties.
+  <h2>Cookies.</h2><p>linkyeg.ca uses cookies. A cookie is a small file placed on your computer's hard
+  drive to identify you as a user, and facilitate your ongoing access to the use of linkyeg.ca.
+  Open Edmonton does not use cookies to collect any personal or identifying information about
+  users, nor does Open Edmonton sell or make them available to third parties.
   You may disable the cookie function on your browser or erase the contents in your
   cookie file by altering the configuration of your browser. If you choose to refuse cookies,
-  however, it is possible that Link-SF will not function properly.</p>
+  however, it is possible that linkyeg.ca will not function properly.</p>
 
   <h2>Disclosure of Personal Information.</h2><p>We disclose personal information to respond to
   subpoenas, court orders, or legal process, or to establish or exercise our legal rights or
@@ -125,7 +125,7 @@
   necessary in order to investigate, prevent, or take action regarding illegal activities,
   suspected fraud, situations involving potential threats to the physical safety of any person,
   violations of our Terms of Service, or as otherwise required by law.
-  St. Anthony may share information with any entity that controls, is controlled by, or
+  Open Edmonton may share information with any entity that controls, is controlled by, or
   under common control with St Anthony. We do not sell any of your information to any
   third parties.</p>
 
@@ -135,12 +135,12 @@
   Explorer or Firefox), the time you visited our site and which pages you visited throughout
   our site.</p>
 
-  <h2>Third Party Links.</h2><p>Link-SF contains links to websites operated by third parties (“Third
+  <h2>Third Party Links.</h2><p>linkyeg.ca contains links to websites operated by third parties (“Third
   Party”). Please be aware that we do not determine and we are not responsible for the
   privacy practices or content of websites and applications operated by Third Parties. We
-  encourage you to be aware when you leave Link-SF, and read the privacy statements of
+  encourage you to be aware when you leave linkyeg.ca, and read the privacy statements of
   Third Party websites and applications linked to the Service. Zendesk does not endorse
   and is not responsible for the practices of these Third Parties or their websites or
-  applications. This Privacy Policy applies only to information collected by St. Anthony
-  through Link-SF.</p>
+  applications. This Privacy Policy applies only to information collected by Open Edmonton
+  through linkyeg.ca.</p>
 </div>
