--- a/app/js/templates/terms.hbs
+++ b/app/js/templates/terms.hbs
@@ -2,35 +2,35 @@
   <h1>linkyeg.ca Terms of Service</h1>
 
   <p>These Terms of Service constitute a contract between you and the Open Edmonton group
-  (“Open Edmonton”) relating to your use of linkyeg.ca Application found at: www.linkyeg.ca.com
+  (“Open Edmonton”) relating to your use of linkyeg.ca Application found at: www.linkyeg.ca
   (“linkyeg.ca”).</p>
 
   <h2>Disclaimer.</h2><p>Open Edmonton HEREBY DISCLAIMS ANY LIABILITY ARISING
   FROM THE USE OF linkyeg.ca. linkyeg.ca, AND THE INFORMATION CONTAINED
-  ON linkyeg.ca IS PROVIDED AS-IS, WITH NO WARRANTIES. ST ANTHONY
+  ON linkyeg.ca IS PROVIDED AS-IS, WITH NO WARRANTIES. Open Edmonton
   DOES NOT PROVIDE ANY WARRANTIES, EXPRESS OR IMPLIED, INCLUDING
   BUT NOT LIMITED TO THE WARRANTIES OF NON-INFRINGEMENT OF THIRD
   PARTY RIGHTS, TITLE, MERCHANTABILITY, FITNESS FOR A PARTICULAR
   PURPOSE OR FREEDOM FROM COMPUTER VIRUS, WITH RESPECT TO LINK-
   SF, THE INFORMATION CONTAINED ON linkyeg.ca, OR THE LINKS
   CONTAINED ON linkyeg.ca. THE ORGANIZATIONS AND SERVICES LISTED ON
-  linkyeg.ca ARE NOT NECESSARILY AFFILIATED WITH ST ANTHONY, AND
+  linkyeg.ca ARE NOT NECESSARILY AFFILIATED WITH ST Open Edmonton, AND
   INCLUSION OF SUCH ORGANIZATIONS AND SERVICES ON linkyeg.ca DOES
-  NOT CONSTITUTE ENDORSEMENT OR SPONSORSHIP BY ST ANTHONY. USE
+  NOT CONSTITUTE ENDORSEMENT OR SPONSORSHIP BY Open Edmonton. USE
   OF linkyeg.ca IS AT THE USER’S OWN RISK.
   YOU ACKNOWLEDGE, BY YOUR USE OF ANY OF linkyeg.ca, THAT YOUR USE
   OF linkyeg.ca AND ANY RELIANCE UPON EITHER IS AT YOUR SOLE RISK AND
   THAT YOU ASSUME FULL RESPONSIBILITY FOR ALL COSTS ASSOCIATED
   WITH YOUR USE OF linkyeg.ca.  YOU AGREE THAT, TO THE FULLEST EXTENT
-  PERMITTED BY APPLICABLE LAW, UNDER NO CIRCUMSTANCES SHALL ST
-  ANTHONY BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL OR
+  PERMITTED BY APPLICABLE LAW, UNDER NO CIRCUMSTANCES SHALL Open
+  Edmonton BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL OR
   CONSEQUENTIAL DAMAGES, INCLUDING, BUT NOT LIMITED TO, DAMAGES
   FOR LOSS OF PROFITS, USE, IMAGES, DATA OR OTHER INTANGIBLES, EVEN
-  IF ST ANTHONY HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH
+  IF Open Edmonton HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH
   DAMAGES, THAT RESULT FROM THE USE OR THE INABILITY TO USE LINK-
   SF OR FROM ANY CHANGES TO linkyeg.ca.
   YOU AGREE THAT, TO THE FULLEST EXTENT PERMITTED BY APPLICABLE
-  LAW, THAT UNDER NO CIRCUMSTANCES SHALL ST ANTHONY BE LIABLE
+  LAW, THAT UNDER NO CIRCUMSTANCES SHALL Open Edmonton BE LIABLE
   OR RESPONSIBLE FOR HARM OR DAMAGES ARISING FROM YOUR USE OF
   THE INFORMATION, FACTS, AND OPINIONS AVAILABLE ON linkyeg.ca
   (INCLUDING ANY LINKS ON linkyeg.ca) OR ARISING OUT OF ANY ACTION
@@ -45,7 +45,7 @@
   <h2>Restrictions on Use.</h2><p>You may not (a) modify, adapt, or hack linkyeg.ca or otherwise
   attempt to gain unauthorized access to Link SF’s related systems or networks; (b) sell,
   resell, or exploit for any commercial purposes any part of linkyeg.ca (c) falsely imply any
-  sponsorship or association with St Anthony, (d) use linkyeg.ca in any unlawful manner; (e)
+  sponsorship or association with Open Edmonton, (d) use linkyeg.ca in any unlawful manner; (e)
   use linkyeg.ca to store or transmit files, materials, data, text, audio, video, images or other
   content that infringes on any person’s intellectual property rights; (f) use the Service in
   any manner that interferes with or disrupts the integrity or performance of linkyeg.ca and
@@ -100,15 +100,15 @@
   <h2>Location Based Service.</h2><p>linkyeg.ca is a location-based service, so Open Edmonton necessarily
   collects and uses the location of users’ mobile devices or location-based data to provide
   the service. By using linkyeg.ca, you authorize Open Edmonton to access your location, and
-  waive any claim against St Anthony for accessing your location. To the extent that the
+  waive any claim against Open Edmonton for accessing your location. To the extent that the
   location-based data Open Edmonton collects is or can be readily combined with other data to
   personally identify you, Open Edmonton will treat such data in the same way as other
   personal information. Open Edmonton will only use your location as necessary to provide
   linkyeg.ca as a service and as may be required to comply with the law.
 
-  <h2>Information Collected by linkyeg.ca.</h2><p>Aside from your location, St Anthony may collect
-  information about that you that you may disclose through linkyeg.ca’s feedback form. St.
-  Anthony will not collect any personally identifiable information about you unless you
+  <h2>Information Collected by linkyeg.ca.</h2><p>Aside from your location, Open Edmonton may collect
+  information about that you that you may disclose through linkyeg.ca’s feedback form. Open
+  Edmonton will not collect any personally identifiable information about you unless you
   provide it voluntarily through linkyeg.ca’s feedback form.</p>
 
   <h2>Cookies.</h2><p>linkyeg.ca uses cookies. A cookie is a small file placed on your computer's hard
@@ -126,7 +126,7 @@
   suspected fraud, situations involving potential threats to the physical safety of any person,
   violations of our Terms of Service, or as otherwise required by law.
   Open Edmonton may share information with any entity that controls, is controlled by, or
-  under common control with St Anthony. We do not sell any of your information to any
+  under common control with Open Edmonton. We do not sell any of your information to any
   third parties.</p>
 
   <h2>Log Files.</h2><p>As with most other websites, we collect and use the data contained in log
